删除用户数据和锁文件，并添加到.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ config.ini
 config.ini.error*
 # Log files
 *.log*
+# User data
+followed_artists.txt*
+content_provider.json
+# Lock files
+uv.lock
 list.txt
 *.log
 *.bat
